--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,31 +1,28 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: Python application
+name: Periodic Book Data Scraper
 
 on:
   schedule:
-    - cron: "0 0 * * *"
-
-permissions:
-  contents: read
+    - cron: '0 0 * * *'  # Runs every 6 hours
 
 jobs:
-  build:
-
+  scrape:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python 3.10
+    - name: Checkout repository
+      uses: actions/checkout@v3
+
+    - name: Set up Python
       uses: actions/setup-python@v3
       with:
-        python-version: "3.10"
+        python-version: '3.x'  # Specify the Python version
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Run Quotes Scraper
-      run: |
-        python quotes_scraper.py
+        pip install requests beautifulsoup4 sqlite3
+
+    - name: Run scraper
+      run: python quotes_scraper.py
